--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            <version>1.16.8</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
